--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
     "emoji-picker-react": "^4.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
