--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "emoji-picker-react": "^4.7.8",
+    "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
