--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build":"npm install && npm install --prefix Client && npm run build --prefix Client"
+    "build":"npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix Client && npm run build --prefix Client"
   },
   "keywords": [],
   "author": "",
